force-app/main/default/objects/Marketing_Campaign__c/fields/Village_look_and_feel_VM__c.field-meta.xml
<CustomField>
    <fullName>Village_look_and_feel_VM__c</fullName>
    <label>Village look and feel/VM</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>