force-app/main/default/objects/Marketing_Campaign__c/fields/Village_Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Village_Marketing_Budget__c</fullName>
    <label>Village Campaign Budget</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>