force-app/main/default/objects/Marketing_Campaign__c/recordTypes/TBVSC_Brand_Campaign.recordType-meta.xml
<RecordType>
    <fullName>TBVSC_Brand_Campaign</fullName>
    <active>true</active>
    <description>TBVSC Brand Campaign: A Marketing Theme or Campaign set at TBVSC Brand level..</description>
    <label>TBVSC Brand Campaign</label>
</RecordType>