force-app/main/default/objects/Marketing_Campaign__c/recordTypes/Village_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Village_Campaign</fullName>
    <active>true</active>
    <description>A Marketing Brief for a Village&apos;s Campaign..</description>
    <label>Village Campaign</label>
</RecordType>