force-app/main/default/objects/Marketing_Campaign__c/validationRules/Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date must be on or after the start date, not before</errorMessage>
</ValidationRule>