force-app/main/default/objects/Marketing_Campaign__c/validationRules/Parent_Marketing_Campaign_Readonly.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Marketing_Campaign_Readonly</fullName>
    <active>false</active>
    <description>Parent_Marketing_Campaign_Readonly</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Parent_Marketing_Campaign__c)
)</errorConditionFormula>
    <errorMessage>Parent Marketing Campaign is a Read Only field.</errorMessage>
</ValidationRule>