force-app/main/default/objects/Marketing_Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Marketing_Campaign_Ref__c</columns>
    <columns>Village__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>