force-app/main/default/objects/Marketing_Campaign__c/listViews/Campaigns_2021.listView-meta.xml
<ListView>
    <fullName>Campaigns_2021</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Village__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Marketing_Campaign__c</field>
        <operation>equals</operation>
    </filters>
    <label>Campaigns 2021</label>
</ListView>