force-app/main/default/objects/Marketing_Campaign__c/listViews/Chinese_New_Year_campaigns.listView-meta.xml
<ListView>
    <fullName>Chinese_New_Year_campaigns</fullName>
    <columns>NAME</columns>
    <columns>Parent_Marketing_Campaign__c</columns>
    <columns>Village__c</columns>
    <columns>Recurring_Campaign_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Campaign_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Campaign__c.Village_Campaign</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Chinese New Year</value>
    </filters>
    <label>Chinese New Year campaigns</label>
    <language>en_US</language>
    <sharedTo>
        <role>Group_Tourism</role>
    </sharedTo>
</ListView>