force-app/main/default/objects/Marketing_Campaign__c/listViews/Error_TBSC_Campaigns.listView-meta.xml
<ListView>
    <fullName>Error_TBSC_Campaigns</fullName>
    <columns>Re_send_to_Oracle__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Village__c</columns>
    <columns>Status__c</columns>
    <columns>Marketing_Campaign_Ref__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Integration_Status__c</field>
        <operation>equals</operation>
        <value>sending,error</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Campaign__c.TBVSC_Brand_Campaign</value>
    </filters>
    <label>TBSC Brand Campaigns with Errors</label>
    <language>en_US</language>
</ListView>