force-app/main/default/objects/Marketing_Campaign__c/listViews/German_Village_Campaigns.listView-meta.xml
<ListView>
    <fullName>German_Village_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Parent_Marketing_Campaign__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Village__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Campaign__c.Village_Campaign</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Wertheim,Ingolstadt</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Open German Village Campaigns</label>
    <language>en_US</language>
</ListView>