force-app/main/default/objects/Marketing_Campaign__c/listViews/IV_2018.listView-meta.xml
<ListView>
    <fullName>IV_2018</fullName>
    <columns>NAME</columns>
    <columns>Parent_Marketing_Campaign__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Village_Marketing_Budget__c</columns>
    <columns>Proposed_Activity_Budget__c</columns>
    <columns>Target_Audience__c</columns>
    <columns>Accumulated_Campaign_Cost__c</columns>
    <columns>Number_of_Activities__c</columns>
    <columns>KPI_Targets__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>contains</operation>
        <value>Ingolstadt</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2018</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Cancelled,Removed</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FOCUS,SUB</value>
    </filters>
    <label>IV 2018</label>
    <language>en_US</language>
</ListView>