force-app/main/default/objects/Marketing_Campaign__c/listViews/JUK_View.listView-meta.xml
<ListView>
    <fullName>JUK_View</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2018</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>contains</operation>
        <value>Wertheim</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>To Be Confirmed,Confirmed</value>
    </filters>
    <label>ADMIN Campaign View Germany</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>German_Marketing</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>