force-app/main/default/objects/Marketing_Campaign__c/listViews/Miriams_Working_View_IV.listView-meta.xml
<ListView>
    <fullName>Miriams_Working_View_IV</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_Activities__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2017</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2017</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>contains</operation>
        <value>Ingolstadt</value>
    </filters>
    <label>IV H2 campaign View</label>
    <language>en_US</language>
</ListView>