force-app/main/default/objects/Marketing_Campaign__c/listViews/My_created_campaigns.listView-meta.xml
<ListView>
    <fullName>My_created_campaigns</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>mcbrearty</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <label>Sam created group campaigns</label>
    <language>en_US</language>
</ListView>