force-app/main/default/objects/Marketing_Campaign__c/listViews/My_Village_Campaigns.listView-meta.xml
<ListView>
    <fullName>My_Village_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Parent_Marketing_Campaign__c</columns>
    <columns>Status__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Village__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Campaign__c.Village_Campaign</value>
    </filters>
    <filters>
        <field>My_Village_Campaigns__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Removed</value>
    </filters>
    <label>My Village Campaigns</label>
    <language>en_US</language>
</ListView>