force-app/main/default/objects/Marketing_Campaign__c/listViews/Pending_TBSC_Brand_Campaigns_Send.listView-meta.xml
<ListView>
    <fullName>Pending_TBSC_Brand_Campaigns_Send</fullName>
    <columns>Transfer_To_Oracle__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Village__c</columns>
    <columns>Status__c</columns>
    <columns>Marketing_Campaign_Ref__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Transfer_To_Oracle__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Campaign__c.TBVSC_Brand_Campaign</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Integration_Status__c</field>
        <operation>equals</operation>
        <value>waiting</value>
    </filters>
    <label>Pending TBSC Brand Campaigns to Send</label>
    <language>en_US</language>
</ListView>